# Git2QtMains

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
